# thesis

./: .gitattributes  .gitignore  Makefile  README.md  bibliography.bib  data_access.bpmn  data_access_new_version.bpmn  feedback and suggestions.txt  ideas.md  questions.md  quick_reference.md  registration_flow.bpmn  thesis plan.tex  thesis_log.md  thesis_plan.tex
Docker/: Dockerfile.identityprovider  Dockerfile.irma  Dockerfile.pepcli  docker-compose.yml  identityprovider.env  irmastart.sh
Docker/identity_provider_resources/: composer.json  identityprovider.env
Docker/identity_provider_resources/config/: authsources.php
docker/: Dockerfile  docker-compose.yml
papers_and_other_material/: Getting the OAuth token (unfinished).drawio  Getting the key.txt  PEP architecture.pptx  System_design_V_1.56b.odt
participant-login-poc/: Cargo.toml
participant-login-poc/config/: config.toml
participant-login-poc/crates/client/: Cargo.toml
participant-login-poc/crates/client/config/: config.toml
participant-login-poc/crates/client/resources/: ClientConfig.json  pepcli  rootCA.cert
participant-login-poc/crates/client/src/: file_browser.rs  http_client.rs  irma_session_handler.rs  main.rs  pepcli_wrapper.rs
participant-login-poc/crates/client/templates/: error.html  fileview.html  success.html
participant-login-poc/crates/server/: Cargo.toml
participant-login-poc/crates/server/config/: config.toml
participant-login-poc/crates/server/src/: http_client.rs  irma_session_handler.rs  main.rs
participant-login-poc/src/: HTTPclient.rs  HTTPrequestBuilder.rs  HttpsClient.rs  http_client.rs  https_client.rs  irma_session_handler.rs  main.rs
participant-login-poc/static/: index.html  notfound.html
participant-login-poc/templates/: disclose.html  index.html.tera  success.html
pepcli-registration-scripts/: add_data.py  main.py  requirements.txt
registration-poc/: Cargo.toml  README.md
registration-poc/src/: irma_session_handler.rs  main.rs  token_generator.rs
text/: bibliography.bib  thesis.tex
text/images/: authentication.bpmn  enrollment.bpmn  registration_flow.bpmn
