[package]
name = "participant-login-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irma = "0.2.1"
tokio = "1.27.0"
serde_json = "1.0"
qrcode = "0.12.0"
image = "0.24.6"
http = "0.2.9"
reqwest = "0.11.18"
toml = "0.7.4"
tera = "1"
simple_logger = "4.2.0" #https://docs.rs/simple_logger/4.2.0/simple_logger/
rand = "0.8.5"
sha256 = "1.1.4"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"

