[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
irma = "0.2.1"
qrcode = "0.12.0"
rand = "0.8.5"
reqwest = "0.11.20"
rocket = "0.5.0-rc.3"
serde = "1.0.188"
serde_json = "1.0.107"
sha256 = "1.4.0"
toml = "0.8.1"
log = "0.4.20"
env_logger = "0.10.0"
base64-url = "2.0.0"
hex = "0.4.3"

